<resources>
    <string name="app_name">fellows</string>
    <string name="innofine">Innofine App</string>
    <string name="username">sername</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgotpassword">forgot password</string>
    <string name="logout">logout</string>
    <string name="notregistered">not registered/click here</string>
    <string name="Register">Register</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="email">email</string>
    <string name="phonenumber">phonenumber</string>
    <string name="gender">gender</string>
    <string name="state">state</string>
    <string name="colorpink">colorpink</string>
    <string name="colowhite">colorwhite</string>

    <string-array name="gender">
        <item> Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="State">
        <item>Select state</item>
        <item>Abia</item>
        <item>Adamava</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>lEbonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Kistina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfra</item>


    </string-array>

</resources>